--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="ganhador">
           <h1 class="contagem"></h1>
           <div class="divVencedor">
-            <h1>O numero sorteado foi:</h1>
+            <h1>O NÚMERO SORTEADO FOI:</h1>
             <h1 class="numeroVencedor"></h1>
             <h1 class="nomeVencedor"></h1>
           </div>
